syntax = "proto3";
package cmd_proto;

import public "game.proto";

option go_package = "proto";

enum Cmd
{
	NONE = 0;
	PING = 1;

	//Version
	CLIENTVER_NTF = 10; 			// 客户端版本号

	//Cmd
	GM_COMMAND = 20; 				// 游戏内部指令

	//Login
	LOGIN = 50; 					// 登录游戏
	CREATE_ROLE = 51; 				// 创建角色
	SET_ROLENAME = 52; 				// 设置角色名字
	ROLEINFO_NTF = 53; 				// 角色信息
	LOGIN_END_NTF = 54; 			// 登录结束

	//Scene
	SCENE_LOAD = 60;				// 加载场景
	SCENE_ROLE = 61; 				// 场景玩家
	SCENE_ROLE_NTF = 62;			// 广播玩家数据
	SCENE_NPC_NTF = 63;				// 广播NPC

	//Mail
	MAIL_LIST_NTF = 80; 			// 邮件列表
	MAIL_OPEN = 81;
	MAIL_ATCH = 82;
	MAIL_DEL = 83;
}

enum ErrorCode
{
	SUCCESS = 0;

	SERVICE_CLOSED      = 1;    	// 服务关闭
	SERVICE_UNAVAILABLE = 2;    	// 服务繁忙
	SERVICE_DBMAX       = 3;    	// 禁止新用户进入
	VERSION_INVALID     = 4;    	// 版本号不对
	PARAM_INVALID       = 5;    	// 参数不合法
	OPREATE_FAST        = 6;    	// 操作太快了
}

message Ping
{
}

//若字段没有被设置字段值，那么该字段在序列化时的数据中是完全不存在的，即不需要编码
//通用协议包装
message CommonMessage
{
	Cmd cmd = 1;
	ErrorCode errorCode = 2;
	Ping ping = 3;

	//协议号对应字段号规则：协议cmd=101，字段号req=1010，ack=1011, ntf=1011
	//新增协议的时候，客户端可以通过菜单“Tools-生成网络协议”来生成协议号对应数据的绑定代码（比如GAME_LOGIN协议对应收取LoginGameAck的数据）

	game_proto.ClientVerNtf clientVerNtf = 101;		//通知客户端有新版本

	game_proto.GMCommandReq gmCommandReq = 200;		//GM命令
	game_proto.GMCommandAck gmCommandAck = 201;

	// Login
	game_proto.LoginReq loginReq = 500;
	game_proto.LoginAck loginAck = 501;
	game_proto.CreateRoleReq createRoleReq = 510;
	game_proto.CreateRoleAck createRoleAck = 511;
	game_proto.SetRoleNameReq setRoleNameReq= 520;
	game_proto.SetRoleNameAck setRoleNameAck= 521;
	game_proto.RoleInfoNtf roleInfoNtf = 531;
	game_proto.LoginEndNtf loginEndNtf = 541;

	// Scene
	game_proto.SceneLoadReq sceneLoadReq = 600;
	game_proto.SceneLoadAck sceneLoadAck = 601;
	game_proto.SceneRoleReq sceneRoleReq = 610;
	game_proto.SceneRoleAck sceneRoleAck = 611;
	game_proto.SceneRoleNtf sceneRoleNtf = 621;
	game_proto.SceneNpcNtf sceneNpcNtf = 631;

	//Mail
	game_proto.MailListNtf mailListNtf = 801;
	game_proto.MailOpenReq mailOpenReq = 810;
	game_proto.MailOpenAck mailOpenAck = 811;
	game_proto.MailAtchReq mailAtchReq = 820;
	game_proto.MailAtchAck mailAtchAck = 821;
	game_proto.MailDelReq mailDelReq = 830;
	game_proto.MailDelAck mailDelAck = 831;
}
